--- a/prod/css/main.css
+++ b/prod/css/main.css
@@ -53,7 +53,7 @@ h4 {
   font-weight: inherit;
 }
 
-@keyframes stevlth-logo-scale {
+@keyframes upscale {
   0% {
     font-size: 1000vw;
   }
@@ -73,11 +73,11 @@ h4 {
 @keyframes stevlth-logo-spacing {
   0% {
     letter-spacing: 2.4em;
-    margin-right: -2.35em;
+    margin-right: -2.40em;
   }
   100% {
-    letter-spacing: 0.6em;
-    margin-right: -0.55em;
+    letter-spacing: 0.5em;
+    margin-right: -0.48em;
   }
 }
 
@@ -85,10 +85,11 @@ h1 {
   margin: 0;
   font-size: 10vw;
   font-weight: 700;
-  letter-spacing: 0.6em;
-  margin: 3vh -0.55em 4vh 0;
+  letter-spacing: 0.5em;
+  margin: 3vh -0.48em 4vh 0;
+  transition-duration: 0.5s;
 
-  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 stevlth-logo-scale;
+  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 upscale;
 }
 h2 {
     font-size: 3vw;
@@ -123,8 +124,6 @@ a:visited {
 .wrapper {
   margin: 0;
 }
-
-/* HEADER */
 
 .header {
   background: darkorange;
@@ -175,8 +174,13 @@ a:visited {
   transition-duration: 0.5s;
 }
 
-.linear-wipe:hover {
-  transform: scale(105%);
+.linear-wipe:hover h1{
+    margin: 5vh -0.58em 6vh 0;
+    letter-spacing: 0.6em;
+}
+
+.linear-wipe:hover:active {
+    transform: scale(80%);
 }
 
 @-webkit-keyframes shine {
@@ -199,6 +203,15 @@ a:visited {
 
 .solana-logo {
   margin-top: 100px;
-  height: 30px;
+  width: 25vw;
   opacity: 0.1;
+  transition-duration: 0.5s;
+}
+.solana-logo:hover {
+  transform: scale(105%);
+  opacity: 0.3;
+}
+.solana-logo:hover:active {
+  transform: scale(80%);
+  opacity: 0.3;
 }
