--- a/prod/css/main.css
+++ b/prod/css/main.css
@@ -55,7 +55,7 @@ h4 {
 
 @keyframes upscale {
   0% {
-    font-size: 1000vw;
+    font-size: 300vw;
   }
   100% {
     font-size: 10vw;
@@ -89,7 +89,7 @@ h1 {
   margin: 3vh -0.48em 4vh 0;
   transition-duration: 0.5s;
 
-  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 upscale;
+  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 upscale, link-loop 10s linear 2s infinite;
 }
 h2 {
     font-size: 3vw;
@@ -169,10 +169,12 @@ a:visited {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: shine 5s linear infinite;
-  animation: shine 5s linear infinite;
+  animation: shine 2s linear infinite;
   /* animation: shine 5s linear infinite, 5s ease 0s 1 fade-out; */
   transition-duration: 0.5s;
 }
+
+
 
 .linear-wipe:hover h1{
     margin: 5vh -0.58em 6vh 0;
@@ -182,6 +184,30 @@ a:visited {
 .linear-wipe:hover:active {
     transform: scale(80%);
 }
+
+@keyframes link-loop {
+    0% {
+        font-size: 10vw;
+    }
+    40% {
+        font-size: 10vw;
+    }
+    41% {
+        font-size: 10.5vw;
+    }
+    43% {
+        font-size: 10vw;
+    }
+    44% {
+        font-size: 10.5vw;
+    }
+    48% {
+        font-size: 10vw;
+    }
+    100% {
+        font-size: 10vw;
+    }
+  }
 
 @-webkit-keyframes shine {
   to {
@@ -203,6 +229,7 @@ a:visited {
 
 .solana-logo {
   margin-top: 100px;
+  max-height: 3vh;
   width: 25vw;
   opacity: 0.1;
   transition-duration: 0.5s;
@@ -214,4 +241,16 @@ a:visited {
 .solana-logo:hover:active {
   transform: scale(80%);
   opacity: 0.3;
+}
+
+.bottom-line {
+    background: linear-gradient(to left, #824ee7 20%, #19b99e 50%, #824ee7 80%);
+    background-size: 200% auto;
+  
+    width: 100%;
+    height: 5px;
+    position: fixed;
+    bottom: 0;
+
+    animation: shine 2s linear infinite;
 }
