--- a/prod/css/main.css
+++ b/prod/css/main.css
@@ -1,33 +1,29 @@
 /* FONTS */
 
 @font-face {
-    font-family: "Jura";
-    font-weight: 300;
-    src:    local("Jura"),
-            local("Jura Light"),
-            url("../fonts/Jura-VariableFont_wght.ttf") format("truetype");
-  }
+  font-family: "Jura";
+  font-weight: 300;
+  src: local("Jura"), local("Jura Light"),
+    url("../fonts/Jura-VariableFont_wght.ttf") format("truetype");
+}
 @font-face {
-    font-family: "Jura";
-    font-weight: 500;
-    src:    local("Jura"),
-            local("Jura Medium"),
-            url("../fonts/Jura-Medium.ttf") format("truetype");
-  }
+  font-family: "Jura";
+  font-weight: 500;
+  src: local("Jura"), local("Jura Medium"),
+    url("../fonts/Jura-Medium.ttf") format("truetype");
+}
 @font-face {
-    font-family: "Jura";
-    font-weight: 600;
-    src:    local("Jura"),
-            local("Jura SemiBold"),
-            url("../fonts/Jura-SemiBold.ttf") format("truetype");
-  }
+  font-family: "Jura";
+  font-weight: 600;
+  src: local("Jura"), local("Jura SemiBold"),
+    url("../fonts/Jura-SemiBold.ttf") format("truetype");
+}
 @font-face {
-    font-family: "Jura";
-    font-weight: 700;
-    src:    local("Jura"),
-            local("Jura Bold"),
-            url("../fonts/Jura-Bold.ttf") format("truetype");
-  }
+  font-family: "Jura";
+  font-weight: 700;
+  src: local("Jura"), local("Jura Bold"),
+    url("../fonts/Jura-Bold.ttf") format("truetype");
+}
 
 /* BODY */
 
@@ -66,14 +62,14 @@ h4 {
     opacity: 0;
   }
   100% {
-      opacity: 1;
+    opacity: 1;
   }
 }
 
 @keyframes stevlth-logo-spacing {
   0% {
     letter-spacing: 2.4em;
-    margin-right: -2.40em;
+    margin-right: -2.4em;
   }
   100% {
     letter-spacing: 0.5em;
@@ -89,21 +85,22 @@ h1 {
   margin: 3vh -0.48em 4vh 0;
   transition-duration: 0.5s;
 
-  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 upscale, link-loop 10s linear 2s infinite;
+  animation: 3s ease 0s 1 stevlth-logo-spacing, 2s ease 0s 1 upscale,
+    link-loop 10s linear 2s infinite;
 }
 h2 {
-    font-size: 3vw;
-    font-weight: 500;
-  }
+  font-size: 3vw;
+  font-weight: 500;
+}
 h3 {
   font-size: 3vw;
   font-weight: 500;
 }
 h4 {
-    font-size: 1.5vw;
-    font-weight: 600;
-    margin-top: 1vh;
-  }
+  font-size: 1.5vw;
+  font-weight: 600;
+  margin-top: 1vh;
+}
 
 a,
 a:visited {
@@ -168,46 +165,44 @@ a:visited {
   text-fill-color: transparent;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
-  -webkit-animation: shine 5s linear infinite;
-  animation: shine 2s linear infinite;
+  -webkit-animation: shine 5s linear 3s infinite;
+  animation: shine 2s linear 3s infinite;
   /* animation: shine 5s linear infinite, 5s ease 0s 1 fade-out; */
   transition-duration: 0.5s;
 }
 
-
-
-.linear-wipe:hover h1{
-    margin: 5vh -0.58em 6vh 0;
-    letter-spacing: 0.6em;
+.linear-wipe:hover h1 {
+  margin: 5vh -0.58em 6vh 0;
+  letter-spacing: 0.6em;
 }
 
 .linear-wipe:hover:active {
-    transform: scale(80%);
+  transform: scale(80%);
 }
 
 @keyframes link-loop {
-    0% {
-        font-size: 10vw;
-    }
-    40% {
-        font-size: 10vw;
-    }
-    41% {
-        font-size: 10.5vw;
-    }
-    43% {
-        font-size: 10vw;
-    }
-    44% {
-        font-size: 10.5vw;
-    }
-    48% {
-        font-size: 10vw;
-    }
-    100% {
-        font-size: 10vw;
-    }
+  0% {
+    font-size: 10vw;
   }
+  40% {
+    font-size: 10vw;
+  }
+  41% {
+    font-size: 10.5vw;
+  }
+  43% {
+    font-size: 10vw;
+  }
+  44% {
+    font-size: 10.5vw;
+  }
+  48% {
+    font-size: 10vw;
+  }
+  100% {
+    font-size: 10vw;
+  }
+}
 
 @-webkit-keyframes shine {
   to {
@@ -244,13 +239,29 @@ a:visited {
 }
 
 .bottom-line {
-    background: linear-gradient(to left, #824ee7 20%, #19b99e 50%, #824ee7 80%);
-    background-size: 200% auto;
-  
-    width: 100%;
-    height: 5px;
-    position: fixed;
-    bottom: 0;
+  background: linear-gradient(to left, #824ee7 20%, #19b99e 50%, #824ee7 80%);
+  background-size: 200% auto;
 
-    animation: shine 2s linear infinite;
+  width: 100%;
+  height: 5px;
+  position: fixed;
+  bottom: 0;
+
+  animation: shine 2s linear infinite;
+}
+
+@media screen and (max-width: 480px) {
+  h1 {
+    font-size: 10vw;
+  }
+  h2 {
+    font-size: 2vh;
+  }
+  h3 {
+    font-size: 2vh;
+  }
+  h4 {
+    font-size: 1.5vh;
+  }
+
 }
